# AceCG

./: .gitignore  CLAUDE.md  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml
configs/: README.md
configs/templates/: cdrem_prod.acg  dsm_noisy_prod.acg  fm_noisy_prod.acg  rem_noisy_prod.acg  tutorial.acg
documentation/: README.md
documentation/developer_guide/: 00_architecture.md  01_potentials.md  02_topology.md  03_compute.md  04_mpi_runtime.md  07_trainers.md  08_schedulers.md  09_workflows.md  11_io_utilities.md
fitters/: fit_bspline.py  fit_multi_gaussian.py
optimizers/: __init__.py  adamW.py  rmsprop.py
optimizers/multithreaded/: __init__.py
potentials/: __init__.py  base.py  gaussian.py  lennardjones.py  lennardjones_soft.py
scripts/: benchmark_forcefield_mask_bounds.py
src/AceCG/: AceCG_structure.md  Compute.py  PACKAGE_STRUCTURE.md  __init__.py  compute.py  neighbortools.py
src/AceCG/analysis/: rdf.py
src/AceCG/compute/: __init__.py  energy.py  force.py  (+5 more)
src/acecg/: __init__.py
tests/: conftest.py  test_analysis_rdf.py  test_boundary_prior.py  test_compute_fm.py  test_compute_new.py  test_compute_params.py  test_config_mask_parser.py  test_configs_utils.py  test_energy_mask.py  test_fm_matrix_solver.py  test_fm_routing.py  test_force_accumulation.py  test_gated_l0.py  test_import_graph.py  test_io_forcefield.py  test_io_lammps_input.py  test_io_tables.py  test_io_trajectory.py  test_mpi_engine_topology_context.py  test_one_pass_engine.py  test_potential_derivatives.py  test_potential_matrix_paths.py  test_samplers_contract.py  test_sampling_rem_workflow.py  test_scheduler_api.py  test_scheduler_optimizer_resume.py  test_scheduler_preflight.py  test_scheduler_resource_pool.py  test_scheduler_streaming.py  test_scheduler_task_runner.py  test_task_runner_post_exec.py  test_topology_atom_type_mapping.py  test_topology_mscg.py  test_topology_types.py  test_trainer_accessors.py  test_trainer_linearity.py  test_trainers_fm_contract.py  test_u4_rem_engine.py  test_u6_cdfm_engine.py  test_vp_ffbuilder.py  (+5 more)
trainers/: analytic.py  base.py
utils/: cgcoords.py  compute.py  ffio.py
(+156 files in other folders)
