[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AceCG"
version = "0.0.1"
description = "Python package for bottom-up coarse-graining"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name="Chengxi (Ace) Yang", email="ycxace@gmail.com" },
    { name="Sheng (Thomas) Qu", email="tqu@uchicago.edu" },
    { name="Weizhi Xue", email="weizhixue@uchicago.edu" },
]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "MDAnalysis>=2.3",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AceVolca/AceCG"
"Bug Tracker" = "https://github.com/AceVolca/AceCG/issues"

[tool.setuptools.package-dir]
AceCG = "."

[tool.setuptools]
packages = [
    "AceCG",
    "AceCG.potentials",
    "AceCG.optimizers",
    "AceCG.optimizers.multithreaded",
    "AceCG.trainers",
    "AceCG.solvers",
    "AceCG.fitters",
    "AceCG.utils",
]
